--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -11,7 +11,11 @@
         {% if post.getTagNames() %}
             <p><span class="minor-text">Tags:
                 {% for tag_name in post.getTagNames() %}
+                    {% if not loop.last %}
+                    <a href="{{ url_for('main.index',tag=tag_name) }}">{{ tag_name }}</a>,
+                    {% else %}
                     <a href="{{ url_for('main.index',tag=tag_name) }}">{{ tag_name }}</a>
+                    {% endif %}
                 {% endfor %}
             </span></p>
         {% endif %}
