--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -72,15 +72,15 @@
         <p><small>Try these interactive sketches I made. Click ... move your mouse ...</small></p>
         <table>
             <tr>
-                <td><a href="{{ url_for('main.processing', name='garden') }}"><img src="{{ url_for('static', filename='images/garden_small.png') }}" width="80" height="80"></a></td>
-                <td><a href="{{ url_for('main.processing', name='stars') }}"><img src="{{ url_for('static', filename='images/stars_small.png') }}" width="80" height="80"></a></td>
+                <td><a href="{{ url_for('main.processing', name='garden') }}"><img src="{{ url_for('static', filename='images/garden_smallx2.png') }}" width="120" height="120"></a></td>
+                <td><a href="{{ url_for('main.processing', name='stars') }}"><img src="{{ url_for('static', filename='images/stars_smallx2.png') }}" width="120" height="120"></a></td>
             </tr>
             <tr>
-                <td><a href="{{ url_for('main.processing', name='snake_game') }}"><img src="{{ url_for('static', filename='images/snakegame_small.png') }}" width="80" height="80"></a></td>
-                <td><a href="{{ url_for('main.processing', name='sun_moon') }}"><img src="{{ url_for('static', filename='images/sunmoon_small.png') }}" width="80" height="80"></a></td>
+                <td><a href="{{ url_for('main.processing', name='snake_game') }}"><img src="{{ url_for('static', filename='images/snakegame_smallx2.png') }}" width="120" height="120"></a></td>
+                <td><a href="{{ url_for('main.processing', name='sun_moon') }}"><img src="{{ url_for('static', filename='images/sunmoon_smallx2.png') }}" width="120" height="120"></a></td>
             </tr>
             <tr>
-                <td><a href="{{ url_for('main.processing', name='robots') }}"><img src="{{ url_for('static', filename='images/robots_small.png') }}" width="80" height="80"></a></td>
+                <td><a href="{{ url_for('main.processing', name='robots') }}"><img src="{{ url_for('static', filename='images/robots_smallx2.png') }}" width="120" height="120"></a></td>
                 <td></td>
             </tr>
         </table>
