--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -139,14 +139,13 @@ input:-webkit-autofill:active  {
     padding-bottom: 4rem;
     width: 100%;
 }
-
-/*** Content Section main page ***/
 .content-wrapper {
     display: grid;
     grid-gap: 2%;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
 }
+/*** Content ***/
 .content-main {
     grid-column: 1/2;
     grid-row: 1/2;
@@ -164,11 +163,11 @@ input:-webkit-autofill:active  {
 .post-btn > a:hover {
     background-color: #C85A13;
 }
+/*** Sidebar ***/
 .content-sidebar {
-    padding-right: 20px;
+    margin-right: 20px;
     grid-column: 1/2;
     grid-row: 2/3;
-    max-width: 220px;
     margin-bottom: 24px;
 }
 .content-sidebar h3:not(:first-child) {
@@ -186,6 +185,9 @@ input:-webkit-autofill:active  {
 .tag_num {
     color: #0B619880;
     font-size: 0.8rem;
+}
+.side-images img {
+    padding: 2px 2px;
 }
 
 
@@ -404,6 +406,7 @@ th, td {
     .content-sidebar {
         grid-column: 2/3;
         grid-row: 1/2;
+        width: 220px;
     }
     .formgrid {
         grid-template-columns: auto 1fr;
