--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -70,20 +70,13 @@
         </ul>
         <h3>I'm bored</h3>
         <p><small>Try these interactive sketches I made. Click ... move your mouse ...</small></p>
-        <table>
-            <tr>
-                <td><a href="{{ url_for('main.processing', name='garden') }}"><img src="{{ url_for('static', filename='images/garden_smallx2.png') }}" width="120" height="120"></a></td>
-                <td><a href="{{ url_for('main.processing', name='stars') }}"><img src="{{ url_for('static', filename='images/stars_smallx2.png') }}" width="120" height="120"></a></td>
-            </tr>
-            <tr>
-                <td><a href="{{ url_for('main.processing', name='snake_game') }}"><img src="{{ url_for('static', filename='images/snakegame_smallx2.png') }}" width="120" height="120"></a></td>
-                <td><a href="{{ url_for('main.processing', name='sun_moon') }}"><img src="{{ url_for('static', filename='images/sunmoon_smallx2.png') }}" width="120" height="120"></a></td>
-            </tr>
-            <tr>
-                <td><a href="{{ url_for('main.processing', name='robots') }}"><img src="{{ url_for('static', filename='images/robots_smallx2.png') }}" width="120" height="120"></a></td>
-                <td></td>
-            </tr>
-        </table>
+        <div class="side-images">
+            <a href="{{ url_for('main.processing', name='garden') }}"><img src="{{ url_for('static', filename='images/garden_smallx2.png') }}" width="100" height="100"></a>
+            <a href="{{ url_for('main.processing', name='stars') }}"><img src="{{ url_for('static', filename='images/stars_smallx2.png') }}" width="100" height="100"></a>
+            <a href="{{ url_for('main.processing', name='snake_game') }}"><img src="{{ url_for('static', filename='images/snakegame_smallx2.png') }}" width="100" height="100"></a>
+            <a href="{{ url_for('main.processing', name='sun_moon') }}"><img src="{{ url_for('static', filename='images/sunmoon_smallx2.png') }}" width="100" height="100"></a>
+            <a href="{{ url_for('main.processing', name='robots') }}"><img src="{{ url_for('static', filename='images/robots_smallx2.png') }}" width="100" height="100"></a>
+        </div>
     </aside>
 </div>
 {% endblock %}
