--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
         <!--prism is for displaying code from the blog-->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/prism.css') }}" type="text/css">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/app.css') }}" type="text/css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/test.css') }}" type="text/css">
         <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139072308-1"></script>
         <script>
