--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -16,7 +16,7 @@ html, body {
     height: 100%;
     width: 100%;
     font-family: 'Roboto Slab', serif;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 body {
@@ -84,7 +84,7 @@ input:-webkit-autofill:active  {
 }
 .site-search > input {
     font-family: inherit;
-    font-size: 90%;
+    font-size: 0.9rem;
 }
 .site-search > input[type=text] {
     width: 110px;
@@ -95,7 +95,6 @@ input:-webkit-autofill:active  {
     padding-right: 4px;
 }
 .site-nav {
-    font-size: 16px;
     grid-column: 1/3;
     grid-row: 2/3;
 }
@@ -104,7 +103,7 @@ input:-webkit-autofill:active  {
     color: #EFEFEF;
     padding-left: 2px;
     padding-right: 2px;
-    font-size: 0.92rem;
+    font-size: 1.0rem;
 }
 .site-nav a:hover {
     /*same as #EFEFEF80 more browsers understand rgba*/
@@ -145,7 +144,7 @@ input:-webkit-autofill:active  {
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
 }
-/*** Content ***/
+/*** Main Area ***/
 .content-main {
     grid-column: 1/2;
     grid-row: 1/2;
@@ -185,6 +184,9 @@ input:-webkit-autofill:active  {
 .tag_num {
     color: #0B619880;
     font-size: 0.8rem;
+}
+.side-images {
+    font-size: 0.9rem;
 }
 .side-images img {
     padding: 2px 2px;
