--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -69,8 +69,8 @@
         {% endfor %}
         </ul>
         <h3>I'm bored</h3>
-        <p><small>Try these interactive sketches I made. Click ... move your mouse ...</small></p>
         <div class="side-images">
+            <p>Try these interactive sketches I made. Click ... move your mouse ...</p>
             <a href="{{ url_for('main.processing', name='garden') }}"><img src="{{ url_for('static', filename='images/garden_smallx2.png') }}" width="100" height="100"></a>
             <a href="{{ url_for('main.processing', name='stars') }}"><img src="{{ url_for('static', filename='images/stars_smallx2.png') }}" width="100" height="100"></a>
             <a href="{{ url_for('main.processing', name='snake_game') }}"><img src="{{ url_for('static', filename='images/snakegame_smallx2.png') }}" width="100" height="100"></a>
