--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png') }}">
         <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
         <!-- Font Awesome -->
-        <script src="https://kit.fontawesome.com/985ea8c115.js"></script>
+        <script src="{{ url_for('static', filename='scripts/fa/all.js') }}"></script>
         <!-- Google fonts -->
         <link href="https://fonts.googleapis.com/css?family=Anton|Roboto+Slab:300,400,700&display=swap" rel="stylesheet">
         <!-- CSS -->
