--- a/app/templates/test/cart.html
+++ b/app/templates/test/cart.html
@@ -17,6 +17,6 @@
 <h4>Total number of items: {{ total_no_items }}</h4>
 <h3>Total ${{ total }}</h3>
 
-<a href="{{ url_for('test.new_checkout') }}">Checkout</a>
+<a href="{{ url_for('test.checkout') }}">Checkout</a>
 
 {% endblock %}
