added send email for comments

--- a/app/templates/main/email_contact.html
+++ b/app/templates/main/email_contact.html
@@ -1,6 +1,6 @@
 <p>You have received a message submitted from the contact form on kevin7.net</p>
-<p>From: {{ contact.name }}
-<p>Email: {{ contact.email }}
-<p>Date: {{ create_date }}
+<p>From: {{ contact.name }}</p>
+<p>Email: {{ contact.email }}</p>
+<p>Date: {{ create_date }}</p>
 <p>Message:</p>
 {{ contact.message }}
