--- a/app/templates/post/_tinymce.html
+++ b/app/templates/post/_tinymce.html
@@ -1,7 +1,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='tinymce/tinymce.min.js') }}"></script>
 <script type="text/javascript">
     tinymce.init({
-    selector: '#clientinfo',
+    selector: '#post',
     plugins: [
       'advlist autolink link image imagetools lists charmap print preview hr anchor pagebreak spellchecker',
       'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
