--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -191,6 +191,12 @@ input:-webkit-autofill:active  {
 .side-images img {
     padding: 2px 2px;
 }
+/*** Comments ***/
+.comments {
+    background-color:white;
+    margin: 10px 0 10px 0;
+    padding: 10px;
+}
 
 
 /*** Footer section ***/
