--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="Kevin Foong - Website & Mobile App Developer, based in Sydney, Australia">
         <title>{% block title %}{% endblock %}</title>
         <!-- favicons -->
@@ -30,6 +31,15 @@
         <!-- Flask moment -->
         {{ moment.include_jquery() }}
         {{ moment.include_moment() }}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139072308-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-139072308-2');
+        </script>
 
         <!-- Custom Javascript -->
         {% block scripts %}
