--- a/app/templates/main/projects.html
+++ b/app/templates/main/projects.html
@@ -4,18 +4,17 @@
 {% block app_content %}
 <h2>Projects</h2>
 <div class="projects">
-    <img src="{{ url_for('static',filename='images/rentalprop_web_1100.jpg') }}">
+    <img src="{{ url_for('static',filename='images/propextr_web_1100.jpg') }}">
     <div class="proj-descrip">
-        <h4>Rental Properties</h4>
-        <p><a href="http://k7rental.pythonanywhere.com"><i>k7rental.pythonanywhere.com</i></a> - Lead developer</p>
-        <p>Built for a non-profit organisation to make scouring the internet
-        for rental properties for crisis accommodation more efficient. Uses two
-        techniques to obtain data:</p>
-        <ul>
-            <li>API (via oauth2 authentication).</li>
-            <li>Web scraping using Python Scrapy. Data hosted on Scrapy Cloud and accessed using Flask website.</li>
-        </ul>
-        <p>Data is automatically downloadable into an Excel spreadsheet (in progress Dec 2019).</p>
+        <h4>Property Extractor</h4>
+        <p><a href="http://propertyextractor.com.au"><i>propertyextractor.com.au</i></a> - Lead developer</p>
+        <p>Utilises the domain.com.au API to search for rental properties
+            in Australia in real-time and to have the results available as a
+            downloadable Excel (csv) file. This website was built for a
+            non-profit org. Users previously spent alot of time copy and pasting
+            search results. This solution provides all search result information
+            in Excel that they can download. The website was built using
+            Python/Flask.</p>
     </div>
     <img src="{{ url_for('static',filename='images/arisa_web_1100.jpg') }}">
     <div class="proj-descrip">
